--- a/userapp/templates/userapp/base.html
+++ b/userapp/templates/userapp/base.html
@@ -12,7 +12,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-VKPH2DX0LG');
+        gtag('config', 'G-WWYWPNM9EP');
       </script>
     <style>
         :root {
