Added ga4 events

--- a/userapp/templates/userapp/base.html
+++ b/userapp/templates/userapp/base.html
@@ -14,6 +14,7 @@
         gtag('js', new Date());
         gtag('config', 'G-WWYWPNM9EP');
       </script>
+      {% block extra_js %}{% endblock %}
     <style>
         :root {
             --primary-color: #4361ee; --primary-light: #e6e9ff; --secondary-color: #3f37c9;
